overflow repair

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
-:root{
+:root {
     --color-purple: rgb(182, 72, 245);
     --color-purple-darker: rgb(126, 48, 172);
     --color-purple-darker-darker: rgb(83, 30, 114);
@@ -9,11 +9,18 @@
     --color-grey-transparent: rgba(230, 230, 230, 0.5);
     --color-grey: #d1d0d0;
     --color-text-grey: #656565;
-} 
-html{
-    scroll-behavior: smooth;
 }
-*{
+
+html {
+    scroll-behavior: smooth;
+    overflow-x: hidden;
+}
+
+body {
+    overflow-x: hidden;
+}
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -22,50 +29,58 @@ html{
     text-decoration: none;
 }
 
-.top-section{
+.top-section {
     width: 100%;
     background-image: url('../images/portfolio-background.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
-section{
+
+section {
     display: flex;
     justify-content: center;
     width: 100%;
     padding-bottom: 50px;
 }
+
 section:not(#banner-section) {
     background-color: #ffffff;
 }
-.container{
+
+.container {
     width: 100%;
     max-width: 1500px;
     height: 100%;
     padding: 0 50px;
 }
 
-.section-heading{
+.section-heading {
     font-size: 50px;
 }
-.first-heading{
+
+.first-heading {
     padding-bottom: 0;
 }
-.dashed-top-text{
+
+.dashed-top-text {
     display: flex;
     align-items: center;
     gap: 10px;
 }
-.dashed-top-text p{
+
+.dashed-top-text p {
     text-transform: uppercase;
     font-size: 15px;
     color: var(--color-grey);
 }
-.dashed-line{
+
+.dashed-line {
     width: 60px;
     height: 0px;
     border: 1px dashed var(--color-purple);
 }
+
 .to-top {
     background-color: var(--color-purple);
     z-index: 10000;
@@ -84,27 +99,32 @@ section:not(#banner-section) {
     opacity: 0;
     pointer-events: none;
     transition: all .4s;
-  }
-.to-top.active{
+}
+
+.to-top.active {
     bottom: 18px;
     pointer-events: auto;
     opacity: 1;
 }
-.to-top:hover{
+
+.to-top:hover {
     background-color: var(--color-purple-darker);
 }
-@media (max-width: 550px){
-    .section-heading{
+
+@media (max-width: 550px) {
+    .section-heading {
         font-size: 40px;
     }
 }
-@media (max-width: 400px){
-    .section-heading{
+
+@media (max-width: 400px) {
+    .section-heading {
         font-size: 30px;
     }
 }
-@media (max-width: 380px){
-    .container{
+
+@media (max-width: 380px) {
+    .container {
         padding: 0 30px;
     }
 }
